[package]
name = "ief_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
tree-sitter = "0.22.4"
tree-sitter-json = "0.21.0"
tree-sitter-xml = "0.6.2"
